# potholes

./: .gitignore  POTHOLE_ANNOTATION_GUIDELINES.md  README.md  config.yaml  pyproject.toml  requirements.txt
landing_page/: index.html  map_3class.html  map_5class.html
landing_page/midsemester_presentation/: index.html
road_classifier/: README.md  app.py  delete_annotated.sh
road_classifier/templates/: index.html
src/: analyze_evaluation.py  anonymize_dataset.py  auto_label.py  evaluate_production.py  export_consensus_dataset.py  filter_frames_by_speed.py  filter_non_empty_yolo.py  find_roi.py  generate_evaluation_samples.py  generate_label_studio_tasks.py  generate_map.py  manage_users.py  ocr_processor.py  predict_frames.py  predict_production.py  predict_video.py  prepare_classifier_dataset.py  sample_frames.py  sync_label_studio_export.py  train_bootstrapper.py  train_classifier.py  train_yolo.py  tune_classifier.py  tune_models.py  view_invalid_crops.py
src/annotation/: export_yolo_to_ls.py  sync_label_studio_export.py
src/classifier/: eval_final_model.py  hyperparam_tune.py  predict_production.py  sample_active_learning.py  train_classifier.py  tune_classifier.py
src/dataset/: augment_minority_classes.py  import_manual_classifications.py  prepare_initial_batch.py
src/evaluation/: generate_thesis_samples.py
src/ingestion/: extract_frames.py  ocr_processor.py  process_frames.py  test_crop.py
src/mapping/: classify_dataset.py  nav_server.py  render_map.py  route_quality.py  snap_to_roads.py
src/yolo/: predict_frames.py  predict_video.py  (+2 more)
(+1 files in other folders)
