[project]
name = "potholes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==5.0.0",
    "certifi==2026.1.4",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "cryptography==46.0.4",
    "ecdsa==0.19.1",
    "idna==3.11",
    "passlib==1.7.4",
    "pyasn1==0.6.2",
    "pycparser==3.0",
    "pygeohash==3.2.2",
    "python-jose==3.5.0",
    "requests==2.32.5",
    "rsa==4.9.1",
    "six==1.17.0",
    "urllib3==2.6.3",
]
